# simple_sandbox

./: .gitignore  README.md  core.py  main.py  pyproject.toml
src/e2b_code_interpreter/: __init__.py
src/simple_sandbox/: __init__.py  cli.py  client.py  client_mcp.py  core.py  models.py  sandbox.py  sandbox_async.py  server.py
src/simple_sandbox/assets/: __init__.py
