[project]
name = "simple-sandbox"
dynamic = ["version"]
description = "LLM Python Code Sandbox - isolated Python execution environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "fastapi-mcp>=0.4.0",
    "ipykernel>=6.29.0",
    "jupyter-client>=8.6.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "fastmcp>=0.1.0",
]

[project.scripts]
sandbox-server = "simple_sandbox.cli:main"

[project.optional-dependencies]
dev = ["hatch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_sandbox"]

[tool.hatch.version]
path = "src/simple_sandbox/__init__.py"
